The NCBITaxonomyDAO is now working properly.  Some redesign was required.
git-svn-id: http://svn.jcvi.org/ANNOTATION/RulesBasedAnnotation/trunk@27169 061605af-e407-0410-a945-9c8a22772c06